welcome.lessons.welcome.bat.bool2.GreenTicket.scala.error
greenTicket:3: error: reassignment to val
else if (a = b || a = c || b = c) {10}
           ^